fix(ribbon): add margin on small screens

--- a/src/css/banner-top.less
+++ b/src/css/banner-top.less
@@ -115,7 +115,11 @@
 @media screen and (max-width: (@content-width - 1px)) {
   #dothiv-tb-content {
     width: 100%;
-    background-position: 3px 3px;
+    background-position: 10px 3px;
+  }
+
+  #dothiv-tb-left {
+    margin-left: @top-ribbon-margin + 10px;
   }
 
   #dothiv-tb-h1 {
